@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.2 2006/10/19 18:49:36 ichiki Exp $
+# $Id: Makefile,v 1.3 2006/10/21 19:07:21 kichiki Exp $
 
 CC           = cc
 LD           = $(CC)
@@ -18,12 +18,26 @@ LIBS         = -lm -L/usr/local/lib -liter -lstokes\
 		-lnetcdf\
 		$(GUILE_LIB)
 
-all:		test-stokes
+all:		test-stokes	\
+		xi3
 
-OBJ =	test-stokes.o
+# test-stokes
+test-stokes-OBJ =	test-stokes.o
 
-test-stokes:	$(OBJ)
-	$(LD) $(LDFLAGS) -o test-stokes $(OBJ) $(LIBS)
+test-stokes:	$(test-stokes-OBJ)
+	$(LD) $(LDFLAGS) -o test-stokes	\
+	$(test-stokes-OBJ)		\
+	$(LIBS)
+
+# xi3
+xi3-OBJ =	xi3.o
+
+xi3:	$(xi3-OBJ)
+	$(LD) $(LDFLAGS) -o xi3	\
+	$(xi3-OBJ)		\
+	$(LIBS)
 
 clean:	
-	rm -f *~ *.o test-stokes
+	rm -f *~ *.o	\
+	test-stokes	\
+	xi3
